// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Collaboration/Invitation Invite 1`] = `
.c11 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c11:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c11:hover {
  background-color: #f2fbfc;
}

.c11:invalid {
  box-shadow: none;
}

.c9 .c10:first-of-type {
  margin-top: 4px;
}

.c9 .c10:last-of-type {
  margin-bottom: 4px;
}

.c9 .c10:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c9 .c10:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c9 .c10:not(:last-of-type):focus + .c10 {
  border-top-color: #bce7f6;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c16 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c16:not([disabled]):hover,
.c16:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c16:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c7 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #353535;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #353535;
}

.c8 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #1a9bc7;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #1a9bc7;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c14 {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.c14 + label {
  cursor: pointer;
  margin: 0;
  display: inline-block;
  font-size: 18px;
  color: #353535;
  line-height: 24px;
  margin-bottom: 4px;
  position: relative;
  padding-left: 28px;
  text-align: left;
}

.c14 + label::before {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 0 1px #353535;
  box-sizing: border-box;
  content: ' ';
  display: block;
  height: 18px;
  position: absolute;
  left: 0;
  top: 4px;
  width: 18px;
  z-index: 0;
}

.c14:checked + label::before {
  background: #1a9bc7;
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c14:hover + label::before,
.c14:focus + label::before {
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c15 {
  color: #6e6e6e;
  font-size: 14px;
  line-height: 16px;
  margin: 4px 0 0;
}

.c13 {
  font-weight: 300;
  margin-bottom: 12px;
  white-space: normal;
}

.c17 {
  width: 100%;
}

.c12 {
  padding-top: 24px;
  padding-bottom: 24px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              onClick={[Function]}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              selected={true}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <form
          action="#"
          noValidate={true}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="c9"
          >
            <input
              className="c10 c11"
              disabled={false}
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="name"
              required={true}
              type="text"
              value=""
            />
            <input
              className="c10 c11"
              disabled={false}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email"
              required={true}
              type="email"
              value=""
            />
          </div>
          <div
            className="c12"
          >
            <div
              className="c13"
            >
              <input
                checked={false}
                className="c14"
                disabled={false}
                id="owner"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Owner"
              />
              <label
                htmlFor="owner"
              >
                Owner
                <p
                  className="c15"
                >
                  Can modify and delete project, invite and remove collaborators
                </p>
              </label>
            </div>
            <div
              className="c13"
            >
              <input
                checked={true}
                className="c14"
                disabled={false}
                id="writer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Writer"
              />
              <label
                htmlFor="writer"
              >
                Writer
                <p
                  className="c15"
                >
                  Can modify project contents
                </p>
              </label>
            </div>
            <div
              className="c13"
            >
              <input
                checked={false}
                className="c14"
                disabled={false}
                id="viewer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Viewer"
              />
              <label
                htmlFor="viewer"
              >
                Viewer
                <p
                  className="c15"
                >
                  Can only review projects without modifying it
                </p>
              </label>
            </div>
          </div>
          <button
            className="c6 c16 c17"
            disabled={false}
            type="submit"
          >
            Send Invitation
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Invite: not owner 1`] = `
.c17 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c17:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c17:hover {
  background-color: #f2fbfc;
}

.c17:invalid {
  box-shadow: none;
}

.c15 .c16:first-of-type {
  margin-top: 4px;
}

.c15 .c16:last-of-type {
  margin-bottom: 4px;
}

.c15 .c16:not(:first-of-type) {
  margin-top: -1px;
  border-top-left-radius: 0;
  border-top-right-radius: 0;
}

.c15 .c16:not(:last-of-type) {
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
  margin-bottom: 0;
}

.c15 .c16:not(:last-of-type):focus + .c16 {
  border-top-color: #bce7f6;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c22 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
  cursor: default;
  background-color: #e2e2e2 !important;
  border-color: #e2e2e2 !important;
  color: #fff !important;
}

.c22 svg + span {
  margin-left: 4px;
}

.c23 {
  color: #fff;
  background-color: #0d79d0;
  border-color: #0d79d0;
}

.c23:not([disabled]):hover,
.c23:not([disabled]):focus {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c23:not([disabled]):active {
  color: #fff;
  background-color: #0b6bb8;
  border-color: #0b6bb8;
}

.c7 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #353535;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #353535;
}

.c8 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #1a9bc7;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #1a9bc7;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c13 {
  height: 24px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 1 "Lato",sans-serif;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  white-space: normal;
}

.c11 {
  background-color: #f2fbfc;
  border: solid 1px #0d79d0;
  color: #2781a1;
}

.c14 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  word-break: break-word;
}

.c20 {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.c20 + label {
  cursor: pointer;
  margin: 0;
  display: inline-block;
  font-size: 18px;
  color: #353535;
  line-height: 24px;
  margin-bottom: 4px;
  position: relative;
  padding-left: 28px;
  text-align: left;
}

.c20 + label::before {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 0 1px #353535;
  box-sizing: border-box;
  content: ' ';
  display: block;
  height: 18px;
  position: absolute;
  left: 0;
  top: 4px;
  width: 18px;
  z-index: 0;
}

.c20:checked + label::before {
  background: #1a9bc7;
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c20:hover + label::before,
.c20:focus + label::before {
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c21 {
  color: #6e6e6e;
  font-size: 14px;
  line-height: 16px;
  margin: 4px 0 0;
}

.c19 {
  font-weight: 300;
  margin-bottom: 12px;
  white-space: normal;
}

.c24 {
  width: 100%;
}

.c18 {
  padding-top: 24px;
  padding-bottom: 24px;
}

.c9 {
  margin-bottom: 8px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              onClick={[Function]}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              selected={true}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <form
          action="#"
          noValidate={true}
          onReset={[Function]}
          onSubmit={[Function]}
        >
          <div
            className="c9"
          >
            <div
              className="c10 c11 alert-message"
            >
              <div
                className="c12"
              >
                <div
                  className="c13"
                >
                  <svg
                    height={24}
                    viewBox="0 0 24 24"
                    width={24}
                  >
                    <path
                      d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
                      fill="#1A9BC7"
                      fillRule="evenodd"
                    />
                  </svg>
                </div>
                <div
                  className="c14"
                >
                  Only project owners can invite others to the project.
                </div>
              </div>
            </div>
          </div>
          <div
            className="c15"
          >
            <input
              className="c16 c17"
              disabled={true}
              name="name"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="name"
              required={true}
              type="text"
              value=""
            />
            <input
              className="c16 c17"
              disabled={true}
              name="email"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="email"
              required={true}
              type="email"
              value=""
            />
          </div>
          <div
            className="c18"
          >
            <div
              className="c19"
            >
              <input
                checked={false}
                className="c20"
                disabled={true}
                id="owner"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Owner"
              />
              <label
                htmlFor="owner"
              >
                Owner
                <p
                  className="c21"
                >
                  Can modify and delete project, invite and remove collaborators
                </p>
              </label>
            </div>
            <div
              className="c19"
            >
              <input
                checked={true}
                className="c20"
                disabled={true}
                id="writer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Writer"
              />
              <label
                htmlFor="writer"
              >
                Writer
                <p
                  className="c21"
                >
                  Can modify project contents
                </p>
              </label>
            </div>
            <div
              className="c19"
            >
              <input
                checked={false}
                className="c20"
                disabled={true}
                id="viewer"
                name="role"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                required={true}
                type="radio"
                value="Viewer"
              />
              <label
                htmlFor="viewer"
              >
                Viewer
                <p
                  className="c21"
                >
                  Can only review projects without modifying it
                </p>
              </label>
            </div>
          </div>
          <button
            className="c22 c23 c24"
            disabled={true}
            type="submit"
          >
            Send Invitation
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: copied 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c16 {
  border: none;
  color: #353535;
  padding: 0;
}

.c16 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c7 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #1a9bc7;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #1a9bc7;
}

.c8 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #353535;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #353535;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c17 {
  color: inherit;
  margin-left: 16px;
}

.c17 g[fill] {
  fill: currentColor;
}

.c17:not([disabled]):focus,
.c17:not([disabled]):hover {
  color: inherit;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

.c13 {
  height: 24px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 1 "Lato",sans-serif;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  white-space: normal;
}

.c11 {
  background-color: #dff0d7;
  border: solid 1px #b2c0ac;
  color: #36b260;
}

.c15 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  word-break: break-word;
}

.c14 {
  -webkit-transform: scale(0.75,0.75);
  -ms-transform: scale(0.75,0.75);
  transform: scale(0.75,0.75);
}

.c20 {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.c20 + label {
  cursor: pointer;
  margin: 0;
  display: inline-block;
  font-size: 18px;
  color: #353535;
  line-height: 24px;
  margin-bottom: 4px;
  position: relative;
  padding-left: 28px;
  text-align: left;
}

.c20 + label::before {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 0 1px #353535;
  box-sizing: border-box;
  content: ' ';
  display: block;
  height: 18px;
  position: absolute;
  left: 0;
  top: 4px;
  width: 18px;
  z-index: 0;
}

.c20:checked + label::before {
  background: #1a9bc7;
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c20:hover + label::before,
.c20:focus + label::before {
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c21 {
  color: #6e6e6e;
  font-size: 14px;
  line-height: 16px;
  margin: 4px 0 0;
}

.c19 {
  font-weight: 300;
  margin-bottom: 12px;
  white-space: normal;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c9 {
  margin-bottom: 8px;
}

.c18 {
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  text-align: left;
  color: #6e6e6e;
  clear: both;
  display: block;
  margin-bottom: 12px;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10 c11 alert-message"
          >
            <div
              className="c12"
            >
              <div
                className="c13"
              >
                <svg
                  className="c14"
                  height={32}
                  viewBox="0 0 32 32"
                  width={32}
                >
                  <defs>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-a"
                    >
                      <path
                        clipRule="evenodd"
                        d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079.012.009.01.012.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01.098-.08-.207.191z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-b"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-c"
                    >
                      <path
                        d="M-15-16h54v55h-54z"
                      />
                    </clipPath>
                    <clipPath
                      clipPathUnits="userSpaceOnUse"
                      id="svg-successgreen-d"
                    >
                      <path
                        d="M0 0h24v24H0z"
                      />
                    </clipPath>
                  </defs>
                  <g
                    clipPath="url(#svg-successgreen-a)"
                    transform="matrix(1.33333 0 0 -1.33333 0 32)"
                  >
                    <g
                      clipPath="url(#svg-successgreen-b)"
                    >
                      <g
                        clipPath="url(#svg-successgreen-c)"
                      >
                        <g
                          clipPath="url(#svg-successgreen-d)"
                        >
                          <path
                            d="M12 24c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-1.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm4.517-7.334l-5.39-4.976-2.296 2.171c-.342.324-.86.369-1.248.14l-.09-.059-.06-.088a.951.951 0 01.17-1.194l2.837-2.665a1.08 1.08 0 011.46 0l5.89 5.502c.342.32.39.808.153 1.176l-.063.086-.092.057c-.4.22-.925.17-1.271-.15zm-8.93-2.618l-.198-.194.092.079h0l.012.009.01.012h0l.083.094zm10.198 2.812a.988.988 0 00.086-.09l.009-.011.014-.01h0l.098-.08z"
                            fill="none"
                            stroke="#36b260"
                            strokeMiterlimit={10}
                            strokeWidth={3}
                          />
                        </g>
                      </g>
                    </g>
                  </g>
                </svg>
              </div>
              <div
                className="c15"
              >
                Link copied to clipboard.
              </div>
              <button
                className="c6 c16 c17"
                onClick={[Function]}
                type="button"
              >
                OK
              </button>
            </div>
          </div>
        </div>
        <span
          className="c18"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="c19"
        >
          <input
            checked={true}
            className="c20"
            disabled={true}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="c21"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="c19"
        >
          <input
            checked={false}
            className="c20"
            disabled={true}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="c21"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: error 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c15 {
  border: none;
  color: #353535;
  padding: 0;
}

.c15 svg {
  max-height: 18px;
  max-width: 18px;
  margin-right: 12px;
}

.c7 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #1a9bc7;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #1a9bc7;
}

.c8 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #353535;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #353535;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c16 {
  color: inherit;
  margin-left: 16px;
}

.c16 g[fill] {
  fill: currentColor;
}

.c16:not([disabled]):focus,
.c16:not([disabled]):hover {
  color: inherit;
  -webkit-filter: brightness(80%);
  filter: brightness(80%);
}

.c13 {
  height: 24px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 1 "Lato",sans-serif;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  white-space: normal;
}

.c11 {
  background-color: #fff1f0;
  border: solid 1px #f5c1b7;
  color: #f35143;
}

.c14 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  word-break: break-word;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c9 {
  margin-bottom: 8px;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10 c11 alert-message"
          >
            <div
              className="c12"
            >
              <div
                className="c13"
              >
                <svg
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M12 1.5c5.799 0 10.5 4.701 10.5 10.5S17.799 22.5 12 22.5 1.5 17.799 1.5 12 6.2 1.5 12 1.5zM12 0c6.627 0 12 5.373 12 12s-5.373 12-12 12S0 18.627 0 12 5.372 0 12 0zm0 16.2a1 1 0 100 2 1 1 0 000-2zM12.02 6a.9.9 0 00-.9.9v7.2a.9.9 0 101.8 0V6.9a.9.9 0 00-.9-.9z"
                    fill="#F35143"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <div
                className="c14"
              >
                Retrieving sharing link failed.
              </div>
              <button
                className="c6 c15 c16"
                onClick={[Function]}
                type="button"
              >
                Retry
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: loaded 1`] = `
.c11 {
  display: block;
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  box-sizing: border-box;
  font: 400 16px / 1 "Lato",sans-serif;
  outline: none;
  padding: 10px 16px;
  position: relative;
  width: 100%;
}

.c11:focus {
  border-color: #bce7f6;
  background-color: #f2fbfc;
}

.c11:hover {
  background-color: #f2fbfc;
}

.c11:invalid {
  box-shadow: none;
}

.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c13 {
  color: #353535;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c13:not([disabled]):hover,
.c13:not([disabled]):focus {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c13:not([disabled]):active {
  color: #0d79d0;
  background-color: #fff;
  border-color: #e2e2e2;
}

.c7 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #1a9bc7;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #1a9bc7;
}

.c8 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #353535;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #353535;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c16 {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.c16 + label {
  cursor: pointer;
  margin: 0;
  display: inline-block;
  font-size: 18px;
  color: #353535;
  line-height: 24px;
  margin-bottom: 4px;
  position: relative;
  padding-left: 28px;
  text-align: left;
}

.c16 + label::before {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 0 1px #353535;
  box-sizing: border-box;
  content: ' ';
  display: block;
  height: 18px;
  position: absolute;
  left: 0;
  top: 4px;
  width: 18px;
  z-index: 0;
}

.c16:checked + label::before {
  background: #1a9bc7;
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c16:hover + label::before,
.c16:focus + label::before {
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c17 {
  color: #6e6e6e;
  font-size: 14px;
  line-height: 16px;
  margin: 4px 0 0;
}

.c15 {
  font-weight: 300;
  margin-bottom: 12px;
  white-space: normal;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c9 {
  border: 1px solid #e2e2e2;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-bottom: 20px;
}

.c9 .c10 {
  border: none;
}

.c9 .c12 {
  border: none;
  color: #0d79d0;
}

.c14 {
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  text-align: left;
  color: #6e6e6e;
  clear: both;
  display: block;
  margin-bottom: 12px;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="c9"
        >
          <input
            className="c10 c11"
            disabled={true}
            name="url"
            style={
              Object {
                "backgroundColor": "white",
              }
            }
            type="text"
            value="http://example.com"
          />
          <button
            className="c12 c6 c13"
            onClick={[Function]}
            type="button"
          >
            COPY
          </button>
        </div>
        <span
          className="c14"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="c15"
        >
          <input
            checked={true}
            className="c16"
            disabled={false}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="c17"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="c15"
        >
          <input
            checked={false}
            className="c16"
            disabled={false}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="c17"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: loading 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c7 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #1a9bc7;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #1a9bc7;
}

.c8 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #353535;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #353535;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div>
          Thinking...
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Link: not owner 1`] = `
.c6 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c6 svg + span {
  margin-left: 4px;
}

.c7 {
  color: #353535;
  background-color: #f2fbfc;
  border-color: #bce7f6;
}

.c7:not([disabled]):hover,
.c7:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c7:not([disabled]):hover svg path[stroke],
.c7:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c7:not([disabled]):hover svg text[fill],
.c7:not([disabled]):focus svg text[fill],
.c7:not([disabled]):hover svg rect[fill],
.c7:not([disabled]):focus svg rect[fill],
.c7:not([disabled]):hover svg path[fill],
.c7:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c7 svg path[stroke] {
  stroke: #1a9bc7;
}

.c7 svg text[fill],
.c7 svg rect[fill],
.c7 svg path[fill] {
  fill: #1a9bc7;
}

.c8 {
  color: #353535;
  background-color: transparent;
  border-color: #e2e2e2;
}

.c8:not([disabled]):hover,
.c8:not([disabled]):focus {
  background-color: #f2fbfc;
}

.c8:not([disabled]):hover svg path[stroke],
.c8:not([disabled]):focus svg path[stroke] {
  stroke: #1a9bc7;
}

.c8:not([disabled]):hover svg text[fill],
.c8:not([disabled]):focus svg text[fill],
.c8:not([disabled]):hover svg rect[fill],
.c8:not([disabled]):focus svg rect[fill],
.c8:not([disabled]):hover svg path[fill],
.c8:not([disabled]):focus svg path[fill] {
  fill: #1a9bc7;
}

.c8 svg path[stroke] {
  stroke: #353535;
}

.c8 svg text[fill],
.c8 svg rect[fill],
.c8 svg path[fill] {
  fill: #353535;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c5 button:not(:first-child) {
  margin-left: 4px;
}

.c13 {
  height: 24px;
  margin-right: 12px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c12 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c10 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 4px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 1 "Lato",sans-serif;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding: 12px;
  white-space: normal;
}

.c11 {
  background-color: #f2fbfc;
  border: solid 1px #0d79d0;
  color: #2781a1;
}

.c14 {
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  word-break: break-word;
}

.c17 {
  position: absolute;
  left: -9999px;
  opacity: 0;
}

.c17 + label {
  cursor: pointer;
  margin: 0;
  display: inline-block;
  font-size: 18px;
  color: #353535;
  line-height: 24px;
  margin-bottom: 4px;
  position: relative;
  padding-left: 28px;
  text-align: left;
}

.c17 + label::before {
  border: 2px solid #fff;
  border-radius: 50%;
  box-shadow: 0 0 0 1px #353535;
  box-sizing: border-box;
  content: ' ';
  display: block;
  height: 18px;
  position: absolute;
  left: 0;
  top: 4px;
  width: 18px;
  z-index: 0;
}

.c17:checked + label::before {
  background: #1a9bc7;
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c17:hover + label::before,
.c17:focus + label::before {
  box-shadow: 0 0 0 1px #1a9bc7;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c2 {
  box-sizing: border-box;
  -webkit-flex: 2;
  -ms-flex: 2;
  flex: 2;
  padding: 20px;
  max-width: 300px;
}

.c18 {
  color: #6e6e6e;
  font-size: 14px;
  line-height: 16px;
  margin: 4px 0 0;
}

.c16 {
  font-weight: 300;
  margin-bottom: 12px;
  white-space: normal;
}

.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-bottom: 28px;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c4 {
  font-size: 20px;
  font-weight: 500;
  line-height: normal;
  -webkit-letter-spacing: -0.9px;
  -moz-letter-spacing: -0.9px;
  -ms-letter-spacing: -0.9px;
  letter-spacing: -0.9px;
  color: #353535;
  display: inline-block;
  padding-right: 20px;
  font-family: "Lato",sans-serif;
}

.c9 {
  margin-bottom: 8px;
}

.c15 {
  font-size: 14px;
  -webkit-letter-spacing: -0.3px;
  -moz-letter-spacing: -0.3px;
  -ms-letter-spacing: -0.3px;
  letter-spacing: -0.3px;
  text-align: left;
  color: #6e6e6e;
  clear: both;
  display: block;
  margin-bottom: 12px;
}

.c1 {
  width: 400px;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
    >
      <div
        className="c2"
      >
        <div
          className="c3"
        >
          <div
            className="c4"
          >
            Share Project
          </div>
          <div
            className="c5"
          >
            <button
              className="c6 c7"
              selected={true}
              type="button"
            >
              Link
            </button>
            <button
              className="c6 c8"
              onClick={[Function]}
              type="button"
            >
              Invite
            </button>
          </div>
        </div>
        <div
          className="c9"
        >
          <div
            className="c10 c11 alert-message"
          >
            <div
              className="c12"
            >
              <div
                className="c13"
              >
                <svg
                  height={24}
                  viewBox="0 0 24 24"
                  width={24}
                >
                  <path
                    d="M12 22.5c5.799 0 10.5-4.701 10.5-10.5S17.799 1.5 12 1.5 1.5 6.201 1.5 12 6.2 22.5 12 22.5zm0 1.5c6.627 0 12-5.373 12-12S18.627 0 12 0 0 5.373 0 12s5.372 12 12 12zm0-16a1 1 0 110-2 1 1 0 010 2zm.02 10.2a.9.9 0 01-.9-.9v-7.2a.9.9 0 111.8 0v7.2a.9.9 0 01-.9.9z"
                    fill="#1A9BC7"
                    fillRule="evenodd"
                  />
                </svg>
              </div>
              <div
                className="c14"
              >
                Only project owners can share links to the document.
              </div>
            </div>
          </div>
        </div>
        <span
          className="c15"
        >
          Anyone with the link can join as:
        </span>
        <div
          className="c16"
        >
          <input
            checked={true}
            className="c17"
            disabled={true}
            id="writer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Writer"
          />
          <label
            htmlFor="writer"
          >
            Writer
            <p
              className="c18"
            >
              Can modify project contents
            </p>
          </label>
        </div>
        <div
          className="c16"
        >
          <input
            checked={false}
            className="c17"
            disabled={true}
            id="viewer"
            name="role"
            onChange={[Function]}
            type="radio"
            value="Viewer"
          />
          <label
            htmlFor="viewer"
          >
            Viewer
            <p
              className="c18"
            >
              Can only review projects without modifying it
            </p>
          </label>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Collaboration/Invitation Share Project Button 1`] = `
.c3 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  background: transparent;
  border: 1px solid transparent;
  border-radius: 4px;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  font: 400 16px / 24px "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  outline: none;
  padding: 7px 12px;
  -webkit-transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  transition: border 0.1s,color 0.1s,background-color 0.1s,color 0.1s, filter 0.1s;
  vertical-align: middle;
  white-space: nowrap;
}

.c3 svg + span {
  margin-left: 4px;
}

.c4 {
  padding: 0;
  height: 24px;
  width: 24px;
}

.c4 svg g[stroke] {
  stroke: currentColor;
}

.c4 svg path[fill] {
  fill: currentColor;
}

.c4 svg path[stroke] {
  stroke: currentColor;
}

.c4 svg text[fill],
.c4 svg rect[fill],
.c4 svg path[fill] {
  fill: currentColor;
}

.c5 {
  color: #353535;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):hover,
.c5:not([disabled]):focus {
  color: #1a9bc7;
  background-color: transparent;
  border-color: transparent;
}

.c5:not([disabled]):active {
  color: #0d79d0;
  background-color: transparent;
  border-color: transparent;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  font-family: "Lato",sans-serif;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c0 {
  background-color: #fff;
  color: #353535;
  font-family: "Lato",sans-serif;
  padding: 3rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c6 svg text[fill],
.c6 svg rect[fill],
.c6 svg path[fill] {
  fill: #1a9bc7;
}

.c6 svg path[stroke] {
  stroke: #1a9bc7;
}

<div
  className="c0"
>
  <div>
    <div
      className="c1"
      onClick={[Function]}
    >
      <div
        className="c2"
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
      >
        <button
          aria-label="Share project"
          className="c3 c4 c5 c6"
          onClick={[Function]}
          size={24}
          type="button"
        >
          <svg
            height={22}
            viewBox="0 0 16 22"
            width={16}
          >
            <g
              fill="none"
              fillRule="evenodd"
              transform="translate(0 1)"
            >
              <path
                d="M13.5 5.5a2 2 0 012 2v11a2 2 0 01-2 2h-11a2 2 0 01-2-2v-11a2 2 0 012-2h1.78c.494.044.742.293.742.747 0 .456-.25.705-.751.747l-.087.004h7.627l-.064-.002c-.45-.037-.694-.249-.731-.635l-.006-.11c0-.456.246-.706.737-.751H13.5zm-1.487 1.498h-.202l.043.002H3a1 1 0 00-.993.883L2 8v10a1 1 0 001 1h10a1 1 0 001-1V8a1 1 0 00-1-1l-1.08.001.093-.003zm-7.829 0H4l.14.003.044-.003z"
                fill="#1A9BC7"
              />
              <rect
                fill="#1A9BC7"
                height={14}
                rx={0.75}
                width={1.5}
                x={7.25}
                y={1}
              />
              <path
                d="M4.994 3.012L8.01.384l3.015 2.628"
                stroke="#1A9BC7"
                strokeLinecap="round"
                strokeWidth={1.5}
              />
            </g>
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
